[package]
name = "telegraph-rs"
version = "0.6.2"
description = "telegraph binding for Rust"
authors = ["Aloxaf <aloxafx@gmail.com>"]
homepage = "https://github.com/Aloxaf/telegraph-rs"
repository = "https://github.com/Aloxaf/telegraph-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["upload", "html"]
upload = ["mime_guess"]
html = ["html_parser"]

[dependencies]
reqwest = { version = "0.11.18", features = [ "json", "multipart" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.97"
mime_guess = { version = "2.0.4", optional = true }
thiserror = "1.0.40"
html_parser = { version = "0.7.0", optional = true }

[dev-dependencies]
tokio = { version = "1.28.2", features = [ "macros", "test-util" ] }
