[package]
name = "telegraph-rs"
version = "0.6.3"
description = "telegraph binding for Rust"
authors = ["Aloxaf <aloxafx@gmail.com>"]
homepage = "https://github.com/Aloxaf/telegraph-rs"
repository = "https://github.com/Aloxaf/telegraph-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["upload", "html", "native-tls"]
upload = ["mime_guess"]
html = ["html_parser"]

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12.5", default-features=false, features = [ "json", "multipart" ] }
serde = { version = "1.0.204", features = [ "derive" ] }
serde_json = "1.0.122"
mime_guess = { version = "2.0.5", optional = true }
thiserror = "1.0.63"
html_parser = { version = "0.7.0", optional = true }

[dev-dependencies]
tokio = { version = "1.39.2", features = [ "macros", "test-util" ] }
