[package]
name = "telegraph-rs"
version = "0.7.0"
description = "telegraph binding for Rust"
authors = ["Aloxaf <aloxafx@gmail.com>"]
homepage = "https://github.com/Aloxaf/telegraph-rs"
repository = "https://github.com/Aloxaf/telegraph-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["html", "native-tls"]
html = ["html_parser"]

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "multipart",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "2.0.17"
html_parser = { version = "0.7.0", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "test-util"] }
